<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Self-Quiz App</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a quiz name</string>
    <string name="button_newQuiz">New Quiz</string>
       <string name="button_newQuestion">New Question</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="button_delQuiz">Delete Quiz</string>
    <string name="button_goDoQuiz">GO!</string>
    <string name="title_activity_new_quiz">Add New Quiz</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_go_do_quiz">GoDoQuiz</string>
    <string name="SelectExistingQuiz"> OR select existing quiz: </string>
    
<string name="selectQuiz">Choose a quiz</string>
 <string name="goSpinner">Random Question</string>
 
 <string name="AddANewQuiz">Enter a New Quiz Name:</string>
  <string name="QuestionTextLabel">Question:</string>
 <string name="button_sendNewQuiz">Add Quiz</string>
  <string name="StatisticsGrade">Quiz Grade:</string>
    <string name="totalQuestions">Total Questions In Quiz:</string>
      <string name="StatisticsAnswered">Total Questions Answered:</string>
        <string name="totalQs">N/A</string>
    <string name="quizGrade">N/A</string>


</resources>
